--- a/relatorio/Netuno/Relatorio.tex
+++ b/relatorio/Netuno/Relatorio.tex
@@ -603,46 +603,7 @@ Fig. \ref{Fig:triton-netuno-anom} shows the difference between the ephemeris off
 \label{Fig:triton-netuno-anom}
 \end{figure}
 
-%\begin{figure}
-%\includegraphics[width=14.0cm]{Anom_TN_1992-1995.png} 
-%\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 1992.0 -> 1995.0}
-%\label{Fig:triton-netuno-1992}
-%\end{figure}
-%\begin{figure}
-%\includegraphics[width=14.0cm]{Anom_TN_1995-1998.png} 
-%\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 1995.0 -> 1998.0}
-%\label{Fig:triton-netuno-1995}
-%\end{figure}
-%\begin{figure}
-%\includegraphics[width=14.0cm]{Anom_TN_1998-2001.png} 
-%\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 1998.0 -> 2001.0}
-%\label{Fig:triton-netuno-1998}
-%\end{figure}
-%\begin{figure}
-%\includegraphics[width=14.0cm]{Anom_TN_2001-2004.png} 
-%\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 2001.0 -> 2004.0}
-%\label{Fig:triton-netuno-2001}
-%\end{figure}
-%\begin{figure}
-%\includegraphics[width=14.0cm]{Anom_TN_2004-2007.png} 
-%\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 2004.0 -> 2007.0}
-%\label{Fig:triton-netuno-2004}
-%\end{figure}
-%\begin{figure}
-%\includegraphics[width=14.0cm]{Anom_TN_2007-2010.png} 
-%\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 2007.0 -> 2010.0}
-%\label{Fig:triton-netuno-2007}
-%\end{figure}
-%\begin{figure}
-%\includegraphics[width=14.0cm]{Anom_TN_2010-2013.png} 
-%\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 2010.0 -> 2013.0}
-%\label{Fig:triton-netuno-2010}
-%\end{figure}
-%\begin{figure}
-%\includegraphics[width=14.0cm]{Anom_TN_2013-2016.png} 
-%\caption{Difference between the offsets of Triton and Neptune by True Anomaly - 2013.0 -> 2016.0}
-%\label{Fig:triton-netuno-2013}
-%\end{figure}
+In Appendix A it is shown the graphics of the difference in the offsets by Argument of Latitude separated for a time interval of 3 years. This is in order to see the variation of the position of Triton around Neptune in a smaller period, what can be masked in an overall graphic.
 
 \section*{Final tests}
 
@@ -663,6 +624,57 @@ We will make tests on selected nights, using rigorously the same reference stars
 
 If we do not find any position improvements in tests (a) and (b), then the current sets of positions will be the final ones. If improvements can be made from the tests, then we will apply the procedures in the reductions in order to have the final sets of positions. 
 
+\appendix
+
+\section*{A - Graphics of Argument of Latitude for small time intervals \label{App:A}}
+
+\begin{figure}[H]
+\includegraphics[width=16.0cm]{Anom_TN_1992-1995.png} 
+\caption{Difference between the offsets of Triton and Neptune by Argument of Latitude between 1992 and 1995. It shows the variation in the position of Triton around Neptune.}
+\label{Fig:triton-netuno-anom}
+\end{figure}
+
+\begin{figure}[H]
+\includegraphics[width=16.0cm]{Anom_TN_1995-1998.png} 
+\caption{Difference between the offsets of Triton and Neptune by Argument of Latitude between 1995 and 1998. It shows the variation in the position of Triton around Neptune.}
+\label{Fig:triton-netuno-anom}
+\end{figure}
+
+\begin{figure}[H]
+\includegraphics[width=16.0cm]{Anom_TN_1998-2001.png} 
+\caption{Difference between the offsets of Triton and Neptune by Argument of Latitude between 1998 and 2001. It shows the variation in the position of Triton around Neptune.}
+\label{Fig:triton-netuno-anom}
+\end{figure}
+
+\begin{figure}[H]
+\includegraphics[width=16.0cm]{Anom_TN_2001-2004.png} 
+\caption{Difference between the offsets of Triton and Neptune by Argument of Latitude between 2001 and 2004. It shows the variation in the position of Triton around Neptune.}
+\label{Fig:triton-netuno-anom}
+\end{figure}
+
+\begin{figure}[H]
+\includegraphics[width=16.0cm]{Anom_TN_2004-2007.png} 
+\caption{Difference between the offsets of Triton and Neptune by Argument of Latitude between 2004 and 2007. It shows the variation in the position of Triton around Neptune.}
+\label{Fig:triton-netuno-anom}
+\end{figure}
+
+\begin{figure}[H]
+\includegraphics[width=16.0cm]{Anom_TN_2007-2010.png} 
+\caption{Difference between the offsets of Triton and Neptune by Argument of Latitude between 2007 and 2010. It shows the variation in the position of Triton around Neptune.}
+\label{Fig:triton-netuno-anom}
+\end{figure}
+
+\begin{figure}[H]
+\includegraphics[width=16.0cm]{Anom_TN_2010-2013.png} 
+\caption{Difference between the offsets of Triton and Neptune by Argument of Latitude between 2010 and 2013. It shows the variation in the position of Triton around Neptune.}
+\label{Fig:triton-netuno-anom}
+\end{figure}
+
+\begin{figure}[H]
+\includegraphics[width=16.0cm]{Anom_TN_2013-2016.png} 
+\caption{Difference between the offsets of Triton and Neptune by Argument of Latitude between 2013 and 2016. It shows the variation in the position of Triton around Neptune.}
+\label{Fig:triton-netuno-anom}
+\end{figure}
 
 \bibliography{references}
 \bibliographystyle{apalike}
